# freeflow-contracts

./: Anchor.toml  Cargo.toml  README.md  deploy.sh
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
programs/repflow-token/: Cargo.toml
programs/repflow-token/migrations/: deploy.ts
programs/repflow-token/src/: burn.rs  error.rs  lib.rs  mint.rs  state.rs  transfer_hook.rs
programs/repflow-token/tests/: repflow_tests.ts
programs/rewards/: Cargo.toml
programs/rewards/src/: lib.rs
programs/staking/: Cargo.toml
programs/staking/src/: lib.rs
tests/: freeflow.ts
