[workspace]
members = [
    "programs/staking",
    "programs/rewards",
    "programs/registry",
    "programs/repflow-token",
]
resolver = "2"

[workspace.dependencies]
anchor-lang    = { version = "0.30.0" }
anchor-spl     = { version = "0.30.0", features = ["token_2022"] }
solana-program      = "1.18"
solana-program-test = "1.18"
solana-sdk          = "1.18"
spl-token           = { version = "4", features = ["no-entrypoint"] }
borsh               = "1"
thiserror           = "1"
tokio               = { version = "1", features = ["full"] }
