[package]
name        = "staking"
version     = "0.1.0"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }
spl-token      = { workspace = true }
borsh          = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk          = { workspace = true }
tokio               = { workspace = true }
